wwr/styles/rafting.css
:root {
    /* Color Schema */
    --primary-color: #F6CF26;
    --secondary-color: #1C9CC5;
    --accent-1-color: #fd1e11;
    --accent-2-color: #C8AE84;

    /* RGBA */
    --primary-background: rgba(246, 207, 38, 0.8);
    --secondary-background: rgba(0, 187, 197, 0.7);

    /* Complementary */
    --black-tone: #000000;
    --white-tone: #FFFFFF;
    
    /* Typography: Heading */
    --heading-font-family: "Racing Sans One", serif;
    --heading-font-weight: 400;
    
    /* Typography: Body */
    --body-font-family: "Roboto", serif;
    --heading-font-weight-bold: 700;
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    max-width: 1024px;
    position: absolute;
    left: 50%;
    transform: translate(-50%);
    font-family: var(--body-font-family);
}

h1, h2, h3, h4, h5, h6 {
    font-family: var(--heading-font-family);
    font-weight: var(--heading-font-weight);
}

header {
    display: grid;
    grid-template-columns: auto 1fr;
    align-items: center;
    margin-bottom: 15px;
}

header img {
    width: 150px;
    height: auto;
}

header nav {
    width: 100%;
    display: flex;
    justify-content: center;
    justify-self: center;
}

header nav a {
    text-decoration: none;
    color: #000000;
    padding: 1rem 4rem;
    text-align: center;
    background-color: var(--accent-1-color);
    font-weight: bolder;
}

p, nav a {
    font-family: var(--body-font-family);
    font-weight: var(--heading-font-weight);
    font-style: normal;
}

/* hero */

.hero {
    position: relative;
}

.hero > img {
    width: 100%;
    display: block;
    height: auto;

}
.hero h1 {
    position: absolute;
    top: 35%;
    left: 50%;
    transform: translate(-50%, -150%);
    display: block;
    width: 100%;
    text-align: center;
    background-color: var(--primary-background);
}

.margin-bottom {
    margin-bottom: 1rem;
}

/* contact-grid */

.contact-grid {
    display: grid;
    gap: 20px;
    grid-template-columns: 1fr 1.3fr;
    grid-template-rows: auto 400px;

}

.contact-grid .information > *{
    padding: 1rem;
    background: var(--primary-background);
}

.contact-grid .c-form {
    grid-row-start: 1;
    grid-column-start: 2;
    grid-row-end: 3;
    grid-column-end: 3;
}

.contact-grid .our-bastion {
    grid-row-start: 3;
    grid-column-start: 1;
    grid-row-end: 4;
    grid-column-end: 3;

    text-align: center;
}

.contact-grid .our-bastion .team {
    display: flex;
    align-items: center;
    flex-direction: row;
    justify-content: space-around;
}


form {
    width: auto;
    margin: 0 auto;
    padding: 1rem;
    border: 1px solid rgb(0 0 0 / 0.1);
    border-radius: 0.5rem;
    background-color: #eee;
    display: grid;
}

fieldset {
    display: grid;
    grid-gap: .5rem;
    margin: 1rem;
    border: 1px solid rgb(0, 0, 0 / 0.2);
    padding: 1rem;
}

legend {
    padding: 0.5rem;
    color: navy;
    font-size: 1.3em;
}

label, input, button, select, textarea {
    font-family: Roboto, Arial, sans-serif;
}

label {
    text-align: left;
    padding-right: 1rem;
}

input, select, textarea {
    padding: 0.5rem;
    font-size: 1.1rem;
}

input[type="checkbox"], input[type="radio"] {
    width: 22px;
    height: 22px;
    vertical-align: bottom;
}

input[type="checkbox"]:hover, input[type="radio"]:hover, label {
    cursor: pointer;
}

input[type="submit"] {
    background-color: var(--secondary-color);
    border: 0;
    box-shadow: 12px 12px 2px 1px var(--dark-tone);
    color: var(--white-tone);
}

button {
    margin: 1rem;
    background-color: navy;
    color: #fff;
    border: none;
    border-radius: .5rem;
    padding: .75rem;
    font-size: 1.2rem;
}

button:hover {
    background-color: darkgreen;
}

.form-item {
    display: flex;
    flex-direction: column;
}

.radio-group {
    display: flex;
    flex-direction: column;
}

.radio-group .radio-item {
    padding: 0.5em;
}

/* hero article */

.hero article {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%);
    width: 80%;
    background-color: var(--secondary-background);
    backdrop-filter: blur(10px);
}

.hero article p {
    padding: 15px;
    clear: none;
    color: var(--dark-tone);
}

.hero article img {
    float: right;
    padding: 5px;
}

/* history */

.history {
    padding: 1rem 0 1rem 0;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-items: center;
}

.history h2 {
    grid-column: 1/4;
    text-align: center;
}

/* gallery */

.gallery {
    padding: 1rem 0 1rem 0;
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    gap: 10px;
    justify-items: center;
    align-items: center;
}

.gallery h2 {
    grid-column: 1/6;
}

.gallery figure {
    text-align: center;
}

/* footer */

footer {
    background-color: var(--secondary-background);
    display: flex;
    align-items: center;
    justify-content: space-around;
    padding: 1rem;
}

footer nav a {
    text-decoration: none;
}

footer nav a img {
    width: 48px;
    height: auto;
}

